--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,18 @@
   "bugs": {
     "url": "https://github.com/yujeongJeon/eslint-config-yujeong/issues"
   },
-  "homepage": "https://github.com/yujeongJeon/eslint-config-yujeong#readme"
+  "homepage": "https://github.com/yujeongJeon/eslint-config-yujeong#readme",
+  "peerDependencies": {
+    "eslint": "^8.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^14.0.0",
+    "eslint-plugin-promise": "^6.0.0"
+  },
+  "devDependencies": {
+    "@types/eslint": "^8.4.1",
+    "eslint": "^8.9.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-n": "^14.0.0",
+    "eslint-plugin-promise": "^6.0.0"
+  }
 }
