--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "eslint-plugin-promise": "^6.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.0",
+    "@babel/core": "^7.17.2",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@types/eslint": "^8.4.1",
     "eslint": "^8.9.0",
     "eslint-plugin-import": "^2.25.4",
